--- a/Parcial 1/Position/estilos.css
+++ b/Parcial 1/Position/estilos.css
@@ -84,52 +84,81 @@ tr
     position: relative;
     width: 300px;
     height: 200px;
-    bottom: 20px;
+    top: 320px;
+    left: 100px;
+    bottom: 50px;
     border: 10px solid blue;
     text-align: center;
     font-family: 'Kanit', sans-serif;
-    font-size: 34px;
+    font-size: 24px;
     border-radius: 10px;
     margin: 20px;
 }
+.gif
+{   
+    width: 200px;
+}
+
+
 
 .caja_relativa_overflow 
 {
     position: relative;
-    width: 300px;
-    height: 250px;
-    bottom: 20px;
-    border: 10px solid blue;
+    width: 1000px;
+    height: 200px;
+    top: 350px;
+    left: 80px;
+    bottom: 20px;   border: 10px solid blue;
     overflow: scroll;
-    text-align: center;
+    text-align: start;
     font-family: 'Kanit', sans-serif;
-    font-size: 34px;
+    font-size: 28px;
     border-radius: 10px;
-
+    line-height: 15px;
 }
 
 .caja_absoluta
 {
     position: absolute;
     text-align: center;
-    width: 200px;
-    height: 150px;
+    width: 280px;
+    height: 180px;
+    top: 5px;
+    left: 5px;
     border: 5px solid red;
-    top: 20px;
-    left: 50px;
-    bottom: 20px;
+    font-family: 'Kanit', sans-serif;
+    font-size: 34px;
+}
+
+.caja_absoluta_pantalla
+{
+    position: absolute;
+    text-align: center;
+    width: 280px;
+    height: 180px;
+    top: 50vh;
+    right: 35vw;
+    border: 5px solid red;
     font-family: 'Kanit', sans-serif;
     font-size: 34px;
 }
 
 .caja_fija
 {
-    width: 200px;
-    height: 500px;
+    width: 1110px;
+    height: 200px;
+    left: 1px;
+    top: 5px;    
     position: fixed;
-    top: 10px;
-    right: 1px;
+    z-index: 1;
     border: 5px solid green;
     font-family: 'Kanit', sans-serif;
-    font-size: 34px;
+    font-size: 28px;
+    background-color: rgb(248, 248, 248);
+}
+.imagen_centrada
+{
+    width: 1105px;
+    height: 155px;
+    right: 20px;
 }
