--- a/Parcial 1/Media Query/estilo.css
+++ b/Parcial 1/Media Query/estilo.css
@@ -22,6 +22,18 @@
     text-align: center;
 }
 
+@media screen and(max-width: 800px)
+{
+    #caja4
+    {
+        clear: left;
+    }
+    .caja
+    {
+        width: calc((100% / 3) - 4px);
+    }
+}
+
 @media screen and (max-width: 400px) and (max-width: 800px)
 {
     #caja4
@@ -34,11 +46,15 @@
     }
 }
 
-@media screen and(max-width: 100px)
+
+@media screen and(max-width: 399px)
 {
-    .caja
+    #caja4
     {
         clear: left;
+    }
+    .caja
+    {
         width: calc(100% - 4px);
     }
 }
