--- a/Parcial 1/10 Grid layot/EstiloGrid.css
+++ b/Parcial 1/10 Grid layot/EstiloGrid.css
@@ -13,35 +13,33 @@
 
     display: grid;
     grid-template-columns: 10% 45% 45%;
-    grid-template-rows: 20% 70% 10%;
+    grid-template-rows: 20% 30% 30% 20%;
     grid-template-areas:'encabezado encabezado encabezado'
-                        'menuLateral columna1 columna2'
+                        'columna1 columna1 menuLateral '
+                        'columna2 columna2  menuLateral'
                         'pie pie pie' ;
 
     justify-content: center;
     align-content: center;
 
-    justify-items: stretch;
-    align-items: stretch;
+    
 }
 
 .caja
 {
-    /*width: 100px;
-    height: 100px;
-    margin: 10px;*/ 
+    width: 100%;
+    height: 100%; 
     background-color: rgb(58, 180, 58);
     text-align: center;
     border: 2px solid black;
 }
 
-#caja1
+#encabezado
 {
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-area: encabezado;
 }
 
-/*#menuLateral
+#menuLateral
 {
     grid-area: menuLateral;
 }
@@ -59,21 +57,18 @@
 #pie
 {
     grid-area: pie;
-}*/
+}
 
-/*
-        <div id="caja6" class="caja">Caja 6</div>
-        <div id="caja7" class="caja">Caja 7</div>
-        <div id="caja8" class="caja">Caja 8</div>
-*/
 
-/*@media screen and(maz-width:800px)
+
+@media screen and(max-width:800px)
 {
     .contenedor
     {
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 200px 200px 200px 200px 200px;
-        grid-template-areas: ;
+        grid-template-areas:'encabezado menuLateral columna1 columna2 pie';
     }
-}*/
+   
+}
