--- a/Parcial 1/9 Display grid/EstiloGrid.css
+++ b/Parcial 1/9 Display grid/EstiloGrid.css
@@ -12,8 +12,8 @@
     background-color: white;
 
     display: grid;
-    grid-template-columns: 10% 45% 45%;
-    grid-template-rows: 20% 70% 10%;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 150px 150px 150px;
 
     justify-content: center;
     align-content: center;
