--- a/Parcial 1/10 Grid layot/EstiloLayout.css
+++ b/Parcial 1/10 Grid layot/EstiloLayout.css
@@ -13,10 +13,10 @@
 
     display: grid;
     grid-template-columns: 10% 45% 45%;
-    grid-template-rows: 20% 30% 30% 20%;
+    grid-template-rows: 25% 25% 25% 25%;
     grid-template-areas:'encabezado encabezado encabezado'
-                        'columna1 columna1 menuLateral '
-                        'columna2 columna2  menuLateral'
+                        'columna1 columna1 menuLateral'
+                        'columna2 columna2 menuLateral'
                         'pie pie pie' ;
 
     justify-content: center;
@@ -29,9 +29,9 @@
 {
     width: 100%;
     height: 100%; 
-    background-color: rgb(58, 180, 58);
+    background-color: orange;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid blue;
 }
 
 #encabezado
@@ -72,3 +72,24 @@
     }
    
 }
+
+.fotoEnca
+{
+    width: 1130px;
+    height: 125px;
+}
+
+.fotoMenu
+{
+    width: 500px;
+    height: 265px;
+}
+
+.fotoC
+{
+    width: 615px;
+    height: 125px;
+    margin: 5px;
+}
+
+
